2da version + menu

--- a/Juego_TO/CMakeLists.txt
+++ b/Juego_TO/CMakeLists.txt
@@ -39,6 +39,10 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         Player.cpp
         Score.cpp
         form.h form.cpp form.ui
+        Nivel.h
+        Nivel.cpp
+        Pregunta.h
+        Pregunta.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Juego_TO APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
